vlib/v/checker/tests/for_in_index_option.vv
import os

fn main() {
	for file in os.ls('.') {
		println(file)
	}
}
